// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/RadioButton Checked 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-gzcbmu hRSugT sc-gkCoMD EiHmM"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 fsRQTo"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jVtzvO StyledRadioButton-g1f6ld-5 cQxxvY"
        >
          <input
            checked=""
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 bRmCoz"
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 cRLbDt StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 lkJviK"
          >
            <svg
              class="StyledRadioButton__StyledRadioButtonIcon-g1f6ld-3 cePNMx"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="6"
              />
            </svg>
          </div>
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/RadioButton Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-gzcbmu grSxBP sc-gkCoMD EiHmM"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 fsRQTo"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jVtzvO StyledRadioButton-g1f6ld-5 cQxxvY"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 bRmCoz"
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 beWZHJ StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 lkJviK"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/RadioButton Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-gzcbmu grSxBP sc-gkCoMD EiHmM"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 Pamnx"
        disabled=""
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jVtzvO StyledRadioButton-g1f6ld-5 cQxxvY"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 dNUTGX"
            disabled=""
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 beWZHJ StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 lkJviK"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;
